# Hackaton-Flightdelay

./: .gitignore  README.md  REPORT.MD  catboost_training.ipynb  flights_analysis.ipynb
.github/actions/docker-deploy/: action.yml
.github/workflows/: backend.yml  ci-cd.yml  microservice.yml
.kombai/resources/: design-review-comprehensive-1738526400.md
Data-science/: ReporteFinal_FligthOnTime.ipynb  requirements.txt
Data-science/back-end/: README.md
Data-science/model/: main.py  predictor_delay.pkl
Data-science/notebooks/: complete_ML.ipynb
Data-science/notebooks/modelos adicionales/: catboost.ipynb
back-end/: .gitignore  README.md
back-end/flight-ontime/flight-ontime/: HELP.md  pom.xml
backend/: Dockerfile  README.md  compose.yaml  pom.xml
backups/flight-ontime-backup-20260107_161226/: pom.xml
frontend/: README.md  db-1767394952420.json  next.config.ts  package-lock.json  package.json
frontend/.vercel/: project.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
frontend/app/about/: opengraph-image.tsx  page.tsx
microservice/: Dockerfile  README.md  main.py  pyproject.toml
microservice/model/: first_model.ipynb
microservice/src/core/: __init__.py  global_error_handler.py  logger.py  schemas.py  settings.py
microservice/src/health_check/: router.py
microservice/src/ping/: __init__.py  router.py  service.py
microservice/src/predict/: __init__.py  di.py  exceptions.py  router.py  schema.py  service.py
model/: main.py  schemas.py
notebooks/modelos adicionales/: xgboost_training.ipynb
(+314 files in other folders)
