[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pyrefly>=0.48.0",
    "slowapi>=0.1.9",
]

[tool.uv]
packages = ["src"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
