[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyrefly>=0.48.0",
    "scikit-learn==1.6.1",
    "slowapi>=0.1.9",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
